- "exp reset" command now resets damage statistics in 's' command
- Portal recording has been fixed.
- Fix teleport using clip.
- Portal recording has been fixed more.
- Moved some messages to "teleport" domain.
- Show weapon name instead of ID in the pl # commands.
- shop_random has been readded.
- Win32 console interface: fixed a crash regarding text input.

New features:
- Mask password input display '*' instead of your real password (Only on linux
  console)
- If old files (from before the CVS cleanup) are found, warn the user
  and bail out. Too many people are reporting "bugs" that are a result
  of conflicts with old files.
- More avoidGM modes. See the news avoid the new avoidGM_near config option.
- The autoresponse system is now back, and improved. The chat_resp.txt
  format has changed. Kore will also not respond to people who are repeating
  themselves.
- teleportAuto_search will now prevent attackAuto from attacking monsters in
  the event that no monsters you are searching for exist onscreen.
- chat.txt uses one line per message, allowing grepping.
- skillsAddAuto will now print a message when it auto-adds a skill.
- Display source and destination coordinates in "Recorded new portal" message.
- route_teleport is now a normal message instead of a debug message (something
  that made my party bot suddenly teleport away from me should not be silent).
- "Failed to take <item>" message now shows more information.
- If a monster's name in monsters.txt is different from what the server sends,
  the name in monsters.txt prevails. (Lets us distinguish between monsters
  that the server gives the same name to, but are different)
- WX Advance Settings now support proxy for download manual.
  You have to add lines 'webproxy' and 'webproxy_port' in config.txt to enable proxy.
- storageAuto will now check if you have the ability to open storage.

tablepack/monsters.txt
- Kobolds have been renamed from Kobold # to Kobold-#.